--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -193,6 +193,41 @@ calculator.imbalance-bar.init-volume-runs=5000.0
 calculator.imbalance-bar.z-score-threshold=1.645
 
 # ============================================================================
+# GATE CHAIN CONFIGURATION
+# ============================================================================
+# Enable/disable gate chain
+gate.chain.enabled=true
+
+# Hard Gate (Layer 1)
+gate.hard.enabled=true
+gate.hard.max.oi.age.minutes=15
+
+# MTF Confluence Gate (Layer 2)
+gate.mtf.enabled=true
+gate.mtf.min.confirmations=3
+gate.mtf.vcp.runway.threshold=0.5
+
+# Signal Quality Gate (Layer 3)
+gate.quality.enabled=true
+gate.quality.min.inst.proxy=0.4
+gate.quality.max.exhaustion=0.7
+gate.quality.require.volume.confirmation=true
+
+# Stats Gate (Layer 4 - Online Learning)
+gate.stats.enabled=true
+gate.stats.min.trades=5
+gate.stats.min.win.rate=0.35
+gate.stats.min.expectancy=-0.2
+gate.stats.max.daily.losses=3
+gate.stats.use.recent.window=true
+
+# ============================================================================
+# MONGODB CONFIGURATION (for SignalStats, SignalHistory)
+# ============================================================================
+spring.data.mongodb.uri=${MONGODB_URI:mongodb://localhost:27017/tradingdb}
+spring.data.mongodb.auto-index-creation=true
+
+# ============================================================================
 # LOGGING
 # ============================================================================
 logging.level.root=INFO
