FIX: Update consumer group IDs for data replay
- Changed kafka.streams.app-id-prefix to replay-20251230-v2-
- Made all @KafkaListener groupId values configurable
- curated-signal-processor -> curated-signal-processor-v2
- mtis-processor -> mtis-processor-v2
- signal-stats-updater -> signal-stats-updater-v2

This will force all consumers to start from earliest offset with the new groups.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,13 @@ spring.kafka.streams.state-dir=/tmp/kafka-streams/${spring.application.name}
 
 # APP-ID PREFIX - Change this to replay data from earliest with new consumer groups
 # Example: "replay-20251229-" creates groups like "replay-20251229-unified-instrument-candle-processor"
-kafka.streams.app-id-prefix=${KAFKA_APP_ID_PREFIX:replay-20251229-}
+kafka.streams.app-id-prefix=${KAFKA_APP_ID_PREFIX:replay-20251230-v2-}
+
+# KAFKA CONSUMER GROUP IDS - Change suffix to replay data
+# Add "-v2", "-v3" etc to force new consumer groups and replay from earliest
+kafka.consumer.curated-group=${KAFKA_CURATED_GROUP:curated-signal-processor-v2}
+kafka.consumer.mtis-group=${KAFKA_MTIS_GROUP:mtis-processor-v2}
+kafka.consumer.stats-group=${KAFKA_STATS_GROUP:signal-stats-updater-v2}
 
 # Serdes
 spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
