--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -199,6 +199,16 @@ calculator.imbalance-bar.init-volume-runs=5000.0
 calculator.imbalance-bar.z-score-threshold=1.645
 
 # ============================================================================
+# CURATED SIGNAL - MULTI-TIMEFRAME LEVELS
+# ============================================================================
+# DISABLED: Requires external Historical Data API at /api/historical
+# The 404 errors are because this API doesn't exist
+# Enable when you have a historical OHLC data service available
+curated.levels.enabled=false
+curated.levels.api.base-url=http://localhost:8080/api/historical
+curated.levels.api.timeout-ms=3000
+
+# ============================================================================
 # GATE CHAIN CONFIGURATION
 # ============================================================================
 # Enable/disable gate chain
@@ -230,7 +240,7 @@ gate.stats.use.recent.window=true
 # ============================================================================
 # MONGODB CONFIGURATION (for SignalStats, SignalHistory)
 # ============================================================================
-spring.data.mongodb.uri=${MONGODB_URI:mongodb://localhost:27017/tradingdb}
+spring.data.mongodb.uri=${MONGODB_URI:mongodb://localhost:27017/tradeIngestion}
 spring.data.mongodb.auto-index-creation=true
 
 # ============================================================================
