FEAT: Integrate 5paisa Historical Data API for multi-TF levels
Updated MultiTimeframeLevelCalculator to use your 5paisa API:
- API: http://13.203.60.173:8002/getHisDataFromFivePaisa
- Fetches 1m OHLC data (50 days back)
- Resamples to Daily/Weekly/Monthly for Fib and Pivot calculations
- Caches data for 5 minutes to avoid excessive API calls

Configuration:
- curated.levels.enabled=true
- curated.levels.api.base-url=http://13.203.60.173:8002
- curated.levels.api.exch=N (NSE)
- curated.levels.api.exch-type=C (Cash)

Features:
- Flexible JSON parsing (handles different field names)
- Automatic resampling from 1m to D/W/M
- Calculates swing highs/lows from historical data
- Classic Pivot Points with CPR
- Fibonacci retracements and extensions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -199,14 +199,17 @@ calculator.imbalance-bar.init-volume-runs=5000.0
 calculator.imbalance-bar.z-score-threshold=1.645
 
 # ============================================================================
-# CURATED SIGNAL - MULTI-TIMEFRAME LEVELS
+# CURATED SIGNAL - MULTI-TIMEFRAME LEVELS (5paisa Historical API)
 # ============================================================================
-# DISABLED: Requires external Historical Data API at /api/historical
-# The 404 errors are because this API doesn't exist
-# Enable when you have a historical OHLC data service available
-curated.levels.enabled=false
-curated.levels.api.base-url=http://localhost:8080/api/historical
-curated.levels.api.timeout-ms=3000
+# Uses 5paisa historical data API to fetch OHLC and calculate Fib/Pivot levels
+# API: /getHisDataFromFivePaisa?exch=N&exch_type=C&scrip_code=XXX&start_date=YYYY-MM-DD&end_date=YYYY-MM-DD&interval=1m
+curated.levels.enabled=true
+curated.levels.api.base-url=http://13.203.60.173:8002
+curated.levels.api.timeout-ms=5000
+# Exchange: N=NSE, M=MCX
+curated.levels.api.exch=N
+# Exchange Type: C=Cash, D=Derivatives
+curated.levels.api.exch-type=C
 
 # ============================================================================
 # GATE CHAIN CONFIGURATION
