FIX: Use same 5paisa API approach as TradeExecutionModule
Inspired by TradeExecutionModule's HistoricalDataClient:
- Use OkHttpClient instead of RestTemplate
- Use HttpUrl.Builder for proper URL construction
- Use @JsonProperty('Open') etc. to match API response format
- Parse 'Datetime' field exactly like TradeExecutionModule

API Response format:
{
  'Datetime': '2025-12-26T09:15:00',
  'Open': 4115, 'High': 4125, 'Low': 4107, 'Close': 4125
}

Changes:
1. Added okhttp dependency to pom.xml
2. Updated MultiTimeframeLevelCalculator to use OkHttpClient
3. Updated OHLCData DTO with proper Jackson annotations
4. Config uses lowercase exch/exch_type (n/c)

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
 
+		<!-- OkHttp for 5paisa Historical API calls -->
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>4.12.0</version>
+		</dependency>
+
 		<!-- Lombok (optional) -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
