--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -201,15 +201,15 @@ calculator.imbalance-bar.z-score-threshold=1.645
 # ============================================================================
 # CURATED SIGNAL - MULTI-TIMEFRAME LEVELS (5paisa Historical API)
 # ============================================================================
-# Uses 5paisa historical data API to fetch OHLC and calculate Fib/Pivot levels
-# API: /getHisDataFromFivePaisa?exch=N&exch_type=C&scrip_code=XXX&start_date=YYYY-MM-DD&end_date=YYYY-MM-DD&interval=1m
+# Uses same 5paisa historical data API as TradeExecutionModule
+# API: /getHisDataFromFivePaisa?exch=n&exch_type=c&scrip_code=XXX&start_date=YYYY-MM-DD&end_date=YYYY-MM-DD&interval=1m
 curated.levels.enabled=true
 curated.levels.api.base-url=http://13.203.60.173:8002
 curated.levels.api.timeout-ms=5000
-# Exchange: N=NSE, M=MCX
-curated.levels.api.exch=N
-# Exchange Type: C=Cash, D=Derivatives
-curated.levels.api.exch-type=C
+# Exchange: n=NSE, m=MCX (lowercase as per API)
+curated.levels.api.exch=n
+# Exchange Type: c=Cash, d=Derivatives (lowercase as per API)
+curated.levels.api.exch-type=c
 
 # ============================================================================
 # GATE CHAIN CONFIGURATION
