--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -137,6 +137,25 @@ mtis.producer.linger.ms=5
 mtis.producer.buffer.memory=33554432
 
 # ============================================================================
+# MASTER ARCHITECTURE (kotsin_FF1 Strategy)
+# ============================================================================
+masterarch.processor.enabled=true
+masterarch.processor.index.scripcode=999920000
+masterarch.processor.history.candles=100
+masterarch.producer.batch.size=16384
+masterarch.producer.linger.ms=5
+masterarch.producer.buffer.memory=33554432
+masterarch.consumer.group-id=masterarch-consumer-v1
+masterarch.consumer.auto-offset-reset=latest
+
+# ============================================================================
+# FUDKII PROCESSOR (Standalone FUDKII Strategy)
+# ============================================================================
+fudkii.processor.enabled=true
+fudkii.processor.min.strength=0.55
+fudkii.processor.history.candles=50
+
+# ============================================================================
 # OUTPUT TOPICS
 # ============================================================================
 trading.signals.output.topic=trading-signals
@@ -239,6 +258,19 @@ gate.stats.min.win.rate=0.35
 gate.stats.min.expectancy=-0.2
 gate.stats.max.daily.losses=3
 gate.stats.use.recent.window=true
+
+# ============================================================================
+# REDIS CONFIGURATION (for RedisCandleHistoryService)
+# ============================================================================
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.password=${REDIS_PASSWORD:}
+spring.data.redis.database=${REDIS_DB:0}
+spring.data.redis.timeout=2000ms
+spring.data.redis.lettuce.pool.max-active=8
+spring.data.redis.lettuce.pool.max-idle=8
+spring.data.redis.lettuce.pool.min-idle=0
+redis.candle.history.ttl.hours=48
 
 # ============================================================================
 # MONGODB CONFIGURATION (for SignalStats, SignalHistory)
