--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,9 @@ spring.kafka.streams.properties.replication.factor=1
 # Performance tuning
 spring.kafka.streams.properties.commit.interval.ms=100
 spring.kafka.streams.properties.statestore.cache.max.bytes=104857600
-spring.kafka.streams.properties.num.stream.threads=2
+# Increased threads to match Orderbook topic partitions (10 partitions)
+# Each thread can process one partition in parallel
+spring.kafka.streams.properties.num.stream.threads=10
 spring.kafka.streams.properties.session.timeout.ms=30000
 spring.kafka.streams.properties.heartbeat.interval.ms=3000
 
@@ -65,6 +67,13 @@ unified.input.topic.orderbook=Orderbook
 unified.input.topic.oi=OpenInterest
 unified.output.topic.instrument=instrument-candle-1m
 unified.window.grace.seconds=5
+
+# Consumer fetch optimization for high-throughput orderbook consumption
+# Optimized for Orderbook topic with 10 partitions
+# Higher values = faster consumption, more memory usage
+unified.processor.max.poll.records=2000
+unified.processor.fetch.min.bytes=2097152
+unified.processor.fetch.max.wait.ms=50
 
 # ============================================================================
 # STAGE 3: FAMILY CANDLE PROCESSOR
