--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,8 +9,8 @@ spring.kafka.streams.state-dir=/tmp/kafka-streams-dev/streamingcandle
 # Processing Configuration (Development - More verbose)
 spring.kafka.streams.properties.processing.guarantee=at_least_once
 spring.kafka.streams.properties.commit.interval.ms=500
-# Increased to 10 threads to match Orderbook topic partitions (10) for full parallelism
-spring.kafka.streams.properties.num.stream.threads=10
+# Set to 20 threads to match DOUBLED Orderbook topic partitions (20 partitions)
+spring.kafka.streams.properties.num.stream.threads=20
 
 # Input topics (Development)
 unified.input.topic.ticks=forwardtesting-data-dev
