--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -14,8 +14,9 @@ kafka.streams.app-id-prefix=${KAFKA_APP_ID_PREFIX:replay-20251228-}
 # Processing Configuration (Production - Optimized)
 spring.kafka.streams.properties.processing.guarantee=exactly_once_v2
 spring.kafka.streams.properties.commit.interval.ms=250
-# Increased to 10 threads to match Orderbook topic partitions (10) for full parallelism
-spring.kafka.streams.properties.num.stream.threads=10
+# Set to 20 threads to match DOUBLED Orderbook topic partitions (20 partitions)
+# Partitions: forwardtesting-data=10, OpenInterest=6, Orderbook=20
+spring.kafka.streams.properties.num.stream.threads=20
 
 # Input topics (Production)
 unified.input.topic.ticks=forwardtesting-data
