--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,9 +40,10 @@ spring.kafka.streams.properties.replication.factor=1
 # Performance tuning
 spring.kafka.streams.properties.commit.interval.ms=100
 spring.kafka.streams.properties.statestore.cache.max.bytes=104857600
-# Increased threads to match Orderbook topic partitions (10 partitions)
-# Each thread can process one partition in parallel
-spring.kafka.streams.properties.num.stream.threads=10
+# Set to 20 threads to match DOUBLED Orderbook topic partitions (20 partitions)
+# Each thread can process one partition in parallel - full parallelism achieved
+# Partitions: forwardtesting-data=10, OpenInterest=6, Orderbook=20 (max)
+spring.kafka.streams.properties.num.stream.threads=20
 spring.kafka.streams.properties.session.timeout.ms=30000
 spring.kafka.streams.properties.heartbeat.interval.ms=3000
 
@@ -66,7 +67,8 @@ unified.input.topic.ticks=forwardtesting-data
 unified.input.topic.orderbook=Orderbook
 unified.input.topic.oi=OpenInterest
 unified.output.topic.instrument=instrument-candle-1m
-unified.window.grace.seconds=5
+# INCREASED: 5s → 60s to handle processing lag and prevent expired window warnings
+unified.window.grace.seconds=60
 
 # Consumer fetch optimization for high-throughput orderbook consumption
 # Optimized for Orderbook topic with 10 partitions
@@ -80,7 +82,8 @@ unified.processor.fetch.max.wait.ms=50
 # ============================================================================
 # Groups instruments into family candles
 family.candle.processor.enabled=true
-family.candle.window.grace.seconds=5
+# INCREASED: 5s → 60s to handle processing lag and prevent expired window warnings
+family.candle.window.grace.seconds=60
 family.candle.cache.ttl.hours=24
 family.cache.refresh.on.miss=true
 
