--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -124,17 +124,20 @@ regime.security.ema.fast=8
 regime.security.ema.slow=21
 
 # FMA PROCESSOR (Final Magnitude Assembly)
-fma.enabled=true
+# TEMPORARILY DISABLED: Waiting for upstream topics (vtd-output, vcp-combined, etc.)
+fma.enabled=false
 fma.cache.ttl.ms=300000
 
 # TRADING SIGNAL PROCESSOR
-signal.enabled=true
+# TEMPORARILY DISABLED: Depends on FMA processor output
+signal.enabled=false
 signal.cache.ttl.ms=120000
 
 # ============================================================================
 # CURATED SIGNALS (High-Quality Filtered Signals)
 # ============================================================================
-curated.enabled=true
+# TEMPORARILY DISABLED: Depends on signal processor output
+curated.enabled=false
 curated.min.magnitude=0.6
 curated.min.confirmation.count=3
 curated.output.topic=curated-trading-signals
