--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,13 +17,16 @@ spring.kafka.streams.state-dir=/tmp/kafka-streams/${spring.application.name}
 
 # APP-ID PREFIX - Change this to replay data from earliest with new consumer groups
 # Example: "replay-20251229-" creates groups like "replay-20251229-unified-instrument-candle-processor"
-kafka.streams.app-id-prefix=${KAFKA_APP_ID_PREFIX:replay-20251230-v2-}
+# Updated: 2026-01-03 - New consumer group to reset offsets to earliest
+# This creates NEW consumer groups that will start from the beginning of all topics
+kafka.streams.app-id-prefix=${KAFKA_APP_ID_PREFIX:replay-20260103-v3-}
 
 # KAFKA CONSUMER GROUP IDS - Change suffix to replay data
 # Add "-v2", "-v3" etc to force new consumer groups and replay from earliest
-kafka.consumer.curated-group=${KAFKA_CURATED_GROUP:curated-signal-processor-v2}
-kafka.consumer.mtis-group=${KAFKA_MTIS_GROUP:mtis-processor-v2}
-kafka.consumer.stats-group=${KAFKA_STATS_GROUP:signal-stats-updater-v2}
+# Updated: 2026-01-03 - New consumer groups to reset offsets to earliest
+kafka.consumer.curated-group=${KAFKA_CURATED_GROUP:curated-signal-processor-v3}
+kafka.consumer.mtis-group=${KAFKA_MTIS_GROUP:mtis-processor-v3}
+kafka.consumer.stats-group=${KAFKA_STATS_GROUP:signal-stats-updater-v3}
 
 # Serdes
 spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
@@ -31,6 +34,7 @@ spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.su
 spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer.model,com.kotsin.consumer.domain.model
 
 # Offset reset - consume from EARLIEST for testing with existing data
+# This forces new consumer groups to start from the beginning of topics
 spring.kafka.streams.properties.auto.offset.reset=earliest
 
 # Processing guarantee
@@ -160,8 +164,8 @@ masterarch.processor.history.candles=100
 masterarch.producer.batch.size=16384
 masterarch.producer.linger.ms=5
 masterarch.producer.buffer.memory=33554432
-masterarch.consumer.group-id=masterarch-consumer-v1
-masterarch.consumer.auto-offset-reset=latest
+masterarch.consumer.group-id=masterarch-consumer-v3
+masterarch.consumer.auto-offset-reset=earliest
 
 # ============================================================================
 # FUDKII PROCESSOR (Standalone FUDKII Strategy)
