--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,7 +9,8 @@ spring.kafka.streams.state-dir=/var/lib/kafka-streams/streamingcandle
 
 # APP-ID PREFIX - Change this to replay data with new consumer groups
 # Set to empty string "" for normal production (use existing offsets)
-kafka.streams.app-id-prefix=${KAFKA_APP_ID_PREFIX:replay-20251228-}
+# Updated: 2026-01-03 - New consumer group to consume from earliest
+kafka.streams.app-id-prefix=${KAFKA_APP_ID_PREFIX:replay-20260103-prod-}
 
 # Processing Configuration (Production - Optimized)
 spring.kafka.streams.properties.processing.guarantee=exactly_once_v2
