--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.kafka.streams.state-dir=/tmp/kafka-streams/${spring.application.name}
 # Example: "replay-20251229-" creates groups like "replay-20251229-unified-instrument-candle-processor"
 # Updated: 2026-01-03 - New consumer group to reset offsets to earliest
 # This creates NEW consumer groups that will start from the beginning of all topics
-kafka.streams.app-id-prefix=${KAFKA_APP_ID_PREFIX:replay-20260103-v3-}
+kafka.streams.app-id-prefix=${KAFKA_APP_ID_PREFIX:streamingcandle-v4-}
 
 # KAFKA CONSUMER GROUP IDS - Change suffix to replay data
 # Add "-v2", "-v3" etc to force new consumer groups and replay from earliest
