--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -142,6 +142,10 @@ signal.cache.ttl.ms=120000
 # ============================================================================
 # TEMPORARILY DISABLED: Depends on signal processor output
 curated.enabled=false
+
+# F&O API Configuration - DISABLED (using FamilyCandle data instead)
+# The FuturesOptionsService API doesn't exist - we use FamilyCandle data directly
+curated.fo.enabled=false
 curated.min.magnitude=0.6
 curated.min.confirmation.count=3
 curated.output.topic=curated-trading-signals
