--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,9 @@ spring.kafka.streams.state-dir=/tmp/kafka-streams/${spring.application.name}
 
 # APP-ID PREFIX - Change this to replay data from earliest with new consumer groups
 # Example: "replay-20251229-" creates groups like "replay-20251229-unified-instrument-candle-processor"
-# Updated: 2026-01-03 - Retest consumer group for MongoDB query fix
+# Updated: 2026-01-04 - New consumer group for symbol-based family ID fallback fix
 # This creates NEW consumer groups that will start from the beginning of all topics
-kafka.streams.app-id-prefix=${KAFKA_APP_ID_PREFIX:retest-mongodb-fix-20260103-}
+kafka.streams.app-id-prefix=${KAFKA_APP_ID_PREFIX:symbol-fallback-fix-20260104-}
 
 # KAFKA CONSUMER GROUP IDS - Change suffix to replay data
 # Add "-v2", "-v3" etc to force new consumer groups and replay from earliest
