--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,16 +17,16 @@ spring.kafka.streams.state-dir=/tmp/kafka-streams/${spring.application.name}
 
 # APP-ID PREFIX - Change this to replay data from earliest with new consumer groups
 # Example: "replay-20251229-" creates groups like "replay-20251229-unified-instrument-candle-processor"
-# Updated: 2026-01-04 - New consumer group for comprehensive logging and ScripRepository integration
+# Updated: 2026-01-04 19:38 - Changed to -v2 to force fresh consumption from earliest
 # This creates NEW consumer groups that will start from the beginning of all topics
-kafka.streams.app-id-prefix=${KAFKA_APP_ID_PREFIX:comprehensive-logging-scriprepo-20260104-}
+kafka.streams.app-id-prefix=${KAFKA_APP_ID_PREFIX:comprehensive-logging-scriprepo-20260104-v2-}
 
 # KAFKA CONSUMER GROUP IDS - Change suffix to replay data
 # Add "-v2", "-v3" etc to force new consumer groups and replay from earliest
-# Updated: 2026-01-03 - New consumer groups to reset offsets to earliest
-kafka.consumer.curated-group=${KAFKA_CURATED_GROUP:curated-signal-processor-v3}
-kafka.consumer.mtis-group=${KAFKA_MTIS_GROUP:mtis-processor-v3}
-kafka.consumer.stats-group=${KAFKA_STATS_GROUP:signal-stats-updater-v3}
+# Updated: 2026-01-04 19:40 - Changed to v4 to force fresh consumption
+kafka.consumer.curated-group=${KAFKA_CURATED_GROUP:curated-signal-processor-v4}
+kafka.consumer.mtis-group=${KAFKA_MTIS_GROUP:mtis-processor-v4}
+kafka.consumer.stats-group=${KAFKA_STATS_GROUP:signal-stats-updater-v4}
 
 # Serdes
 spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
@@ -168,7 +168,7 @@ masterarch.processor.history.candles=100
 masterarch.producer.batch.size=16384
 masterarch.producer.linger.ms=5
 masterarch.producer.buffer.memory=33554432
-masterarch.consumer.group-id=masterarch-consumer-v3
+masterarch.consumer.group-id=masterarch-consumer-v4
 masterarch.consumer.auto-offset-reset=earliest
 
 # ============================================================================
