--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,10 +23,10 @@ kafka.streams.app-id-prefix=${KAFKA_APP_ID_PREFIX:comprehensive-logging-scriprep
 
 # KAFKA CONSUMER GROUP IDS - Change suffix to replay data
 # Add "-v2", "-v3" etc to force new consumer groups and replay from earliest
-# Updated: 2026-01-04 19:40 - Changed to v4 to force fresh consumption
-kafka.consumer.curated-group=${KAFKA_CURATED_GROUP:curated-signal-processor-v4}
-kafka.consumer.mtis-group=${KAFKA_MTIS_GROUP:mtis-processor-v4}
-kafka.consumer.stats-group=${KAFKA_STATS_GROUP:signal-stats-updater-v4}
+# Updated: 2026-01-04 22:59 - Changed to v10 to test 10/10 implementation
+kafka.consumer.curated-group=${KAFKA_CURATED_GROUP:curated-signal-processor-v10}
+kafka.consumer.mtis-group=${KAFKA_MTIS_GROUP:mtis-processor-v10}
+kafka.consumer.stats-group=${KAFKA_STATS_GROUP:signal-stats-updater-v10}
 
 # Serdes
 spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
@@ -168,7 +168,7 @@ masterarch.processor.history.candles=100
 masterarch.producer.batch.size=16384
 masterarch.producer.linger.ms=5
 masterarch.producer.buffer.memory=33554432
-masterarch.consumer.group-id=masterarch-consumer-v4
+masterarch.consumer.group-id=masterarch-consumer-v10
 masterarch.consumer.auto-offset-reset=earliest
 
 # ============================================================================
