--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,14 +19,15 @@ spring.kafka.streams.state-dir=/tmp/kafka-streams/${spring.application.name}
 # Example: "replay-20251229-" creates groups like "replay-20251229-unified-instrument-candle-processor"
 # Updated: 2026-01-04 19:38 - Changed to -v2 to force fresh consumption from earliest
 # This creates NEW consumer groups that will start from the beginning of all topics
-kafka.streams.app-id-prefix=${KAFKA_APP_ID_PREFIX:comprehensive-logging-scriprepo-20260104-v2-}
+kafka.streams.app-id-prefix=v11-spread-enhanced-20260105-${KAFKA_APP_ID_PREFIX:comprehensive-logging-scriprepo-20260104-v2-}
 
 # KAFKA CONSUMER GROUP IDS - Change suffix to replay data
 # Add "-v2", "-v3" etc to force new consumer groups and replay from earliest
-# Updated: 2026-01-04 22:59 - Changed to v10 to test 10/10 implementation
-kafka.consumer.curated-group=${KAFKA_CURATED_GROUP:curated-signal-processor-v10}
-kafka.consumer.mtis-group=${KAFKA_MTIS_GROUP:mtis-processor-v10}
-kafka.consumer.stats-group=${KAFKA_STATS_GROUP:signal-stats-updater-v10}
+# Updated: 2026-01-04 22:59 - Changed to v10 to test 10/10
+# Individual consumer groups
+kafka.consumer.curated-group=curated-consumer-group-v11
+kafka.consumer.mtis-group=mtis-consumer-group-v11
+kafka.consumer.stats-group=stats-consumer-group-v11
 
 # Serdes
 spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
@@ -168,7 +169,7 @@ masterarch.processor.history.candles=100
 masterarch.producer.batch.size=16384
 masterarch.producer.linger.ms=5
 masterarch.producer.buffer.memory=33554432
-masterarch.consumer.group-id=masterarch-consumer-v10
+masterarch.consumer.group-id=masterarch-consumer-v11
 masterarch.consumer.auto-offset-reset=earliest
 
 # ============================================================================
