Enable DEBUG logging for detailed indicator values

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -306,15 +306,16 @@ spring.data.mongodb.auto-index-creation=true
 # LOGGING
 # ============================================================================
 logging.level.root=INFO
-logging.level.com.kotsin.consumer=INFO
+logging.level.com.kotsin.consumer=DEBUG
 logging.level.com.kotsin.consumer.infrastructure.kafka=DEBUG
 logging.level.com.kotsin.consumer.domain.service=DEBUG
-logging.level.com.kotsin.consumer.processor=INFO
-logging.level.com.kotsin.consumer.regime=INFO
-logging.level.com.kotsin.consumer.signal=INFO
-logging.level.com.kotsin.consumer.capital=INFO
+logging.level.com.kotsin.consumer.processor=DEBUG
+logging.level.com.kotsin.consumer.service=DEBUG
+logging.level.com.kotsin.consumer.regime=DEBUG
+logging.level.com.kotsin.consumer.signal=DEBUG
+logging.level.com.kotsin.consumer.capital=DEBUG
 logging.level.com.kotsin.consumer.curated=DEBUG
-logging.level.com.kotsin.consumer.score=INFO
+logging.level.com.kotsin.consumer.score=DEBUG
 logging.level.org.apache.kafka=WARN
 
 # Pattern with timestamp
