--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,8 +72,9 @@ unified.input.topic.ticks=forwardtesting-data
 unified.input.topic.orderbook=Orderbook
 unified.input.topic.oi=OpenInterest
 unified.output.topic.instrument=instrument-candle-1m
-# INCREASED: 5s → 60s to handle processing lag and prevent expired window warnings
-unified.window.grace.seconds=60
+# FIX Bug #11: Reduced from 60s to 10s for faster signal emission
+# 60s was causing 2+ minute delays in signal generation
+unified.window.grace.seconds=10
 
 # Consumer fetch optimization for high-throughput orderbook consumption
 # Optimized for Orderbook topic with 10 partitions
@@ -87,8 +88,9 @@ unified.processor.fetch.max.wait.ms=50
 # ============================================================================
 # Groups instruments into family candles
 family.candle.processor.enabled=true
-# INCREASED: 5s → 30s to handle processing lag and prevent expired window warnings
-family.candle.window.grace.seconds=30
+# FIX Bug #11: Reduced from 30s to 5s for faster signal emission
+# 30s was causing 90+ second delays in signal generation
+family.candle.window.grace.seconds=5
 family.candle.cache.ttl.hours=24
 family.cache.refresh.on.miss=true
 
