--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,8 @@ server.port=${SERVER_PORT:8081}
 spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:13.203.60.173:9094}
 spring.kafka.streams.application-id=${KAFKA_APP_ID:unified-family-processor-v2}
 spring.kafka.streams.client-id=streamingcandle-family
-spring.kafka.streams.state-dir=/tmp/kafka-streams/${spring.application.name}
+# FIXED: Use persistent directory instead of /tmp (which OS can clear)
+spring.kafka.streams.state-dir=/var/lib/kafka-streams/${spring.application.name}
 
 # APP-ID PREFIX - Change this to replay data from earliest with new consumer groups
 # Example: "replay-20251229-" creates groups like "replay-20251229-unified-instrument-candle-processor"
