--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,9 +73,9 @@ unified.input.topic.ticks=forwardtesting-data
 unified.input.topic.orderbook=Orderbook
 unified.input.topic.oi=OpenInterest
 unified.output.topic.instrument=instrument-candle-1m
-# FIX Bug #11: Reduced from 60s to 10s for faster signal emission
-# 60s was causing 2+ minute delays in signal generation
-unified.window.grace.seconds=10
+# FIX: Reduced to 2s for fast candle emission
+# Ticks arriving within 2s of window close are included, then emit immediately
+unified.window.grace.seconds=2
 
 # Consumer fetch optimization for high-throughput orderbook consumption
 # Optimized for Orderbook topic with 10 partitions
@@ -89,9 +89,9 @@ unified.processor.fetch.max.wait.ms=50
 # ============================================================================
 # Groups instruments into family candles
 family.candle.processor.enabled=true
-# FIX Bug #11: Reduced from 30s to 5s for faster signal emission
-# 30s was causing 90+ second delays in signal generation
-family.candle.window.grace.seconds=5
+# FIX: Reduced to 2s for fast candle emission (consistent across all processors)
+# Late ticks within 2s are included, then emit immediately
+family.candle.window.grace.seconds=2
 family.candle.cache.ttl.hours=24
 family.cache.refresh.on.miss=true
 
@@ -100,6 +100,8 @@ family.cache.refresh.on.miss=true
 # ============================================================================
 # Aggregates 1m -> higher timeframes
 timeframe.aggregator.enabled=true
+# FIX: 2 second grace period for fast emission (consistent across all processors)
+timeframe.aggregator.grace.seconds=2
 
 # Family candle output topics
 family.output.topics.1m=family-candle-1m
