--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,9 +35,10 @@ spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serial
 spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.support.serializer.JsonSerde
 spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer.model,com.kotsin.consumer.domain.model
 
-# Offset reset - consume from EARLIEST for testing with existing data
-# This forces new consumer groups to start from the beginning of topics
-spring.kafka.streams.properties.auto.offset.reset=earliest
+# FIX: Offset reset - use LATEST for production to avoid replaying old data
+# Use 'earliest' ONLY for testing/replay scenarios (change manually when needed)
+# WARNING: 'earliest' causes delayed signals when processing historical data as if it were live
+spring.kafka.streams.properties.auto.offset.reset=latest
 
 # Processing guarantee
 spring.kafka.streams.properties.processing.guarantee=at_least_once
