--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.port=${SERVER_PORT:8081}
 # ============================================================================
 # KAFKA STREAMS CONFIGURATION
 # ============================================================================
-spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:13.203.60.173:9094}
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
 spring.kafka.streams.application-id=${KAFKA_APP_ID:unified-family-processor-v2}
 spring.kafka.streams.client-id=streamingcandle-family
 # FIXED: Use persistent directory instead of /tmp (which OS can clear)
