--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -194,7 +194,7 @@ curated.signals.output.topic=curated-trading-signals
 # ============================================================================
 # SCRIPFINDER API CONFIGURATION
 # ============================================================================
-scripfinder.api.base-url=${SCRIPFINDER_API_URL:http://13.203.60.173:8102}
+scripfinder.api.base-url=${SCRIPFINDER_API_URL:http://localhost:8102}
 scripfinder.api.timeout.ms=${SCRIPFINDER_TIMEOUT_MS:3000}
 scripfinder.api.circuit-breaker.failure-threshold=5
 scripfinder.api.circuit-breaker.timeout-ms=60000
@@ -253,7 +253,7 @@ calculator.imbalance-bar.z-score-threshold=1.645
 # Uses same 5paisa historical data API as TradeExecutionModule
 # API: /getHisDataFromFivePaisa?exch=n&exch_type=c&scrip_code=XXX&start_date=YYYY-MM-DD&end_date=YYYY-MM-DD&interval=1m
 curated.levels.enabled=true
-curated.levels.api.base-url=http://13.203.60.173:8002
+curated.levels.api.base-url=http://localhost:8002
 curated.levels.api.timeout-ms=5000
 # Exchange: n=NSE, m=MCX (lowercase as per API)
 curated.levels.api.exch=n
