--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -74,9 +74,10 @@ unified.input.topic.ticks=forwardtesting-data
 unified.input.topic.orderbook=Orderbook
 unified.input.topic.oi=OpenInterest
 unified.output.topic.instrument=instrument-candle-1m
-# FIX: Reduced to 2s for fast candle emission
-# Ticks arriving within 2s of window close are included, then emit immediately
-unified.window.grace.seconds=2
+# FIX: Increased to 10s to allow options/futures from different partitions to arrive
+# Options were arriving AFTER window emission with 2s grace (timing issue)
+# 10s gives sufficient time for all family members to be collected
+unified.window.grace.seconds=10
 
 # Consumer fetch optimization for high-throughput orderbook consumption
 # Optimized for Orderbook topic with 10 partitions
@@ -90,9 +91,9 @@ unified.processor.fetch.max.wait.ms=50
 # ============================================================================
 # Groups instruments into family candles
 family.candle.processor.enabled=true
-# FIX: Reduced to 2s for fast candle emission (consistent across all processors)
-# Late ticks within 2s are included, then emit immediately
-family.candle.window.grace.seconds=2
+# FIX: Increased to 10s to allow options from different partitions to arrive
+# Options were arriving AFTER window emission with 2s grace (timing issue)
+family.candle.window.grace.seconds=10
 family.candle.cache.ttl.hours=24
 family.cache.refresh.on.miss=true
 
@@ -101,8 +102,8 @@ family.cache.refresh.on.miss=true
 # ============================================================================
 # Aggregates 1m -> higher timeframes
 timeframe.aggregator.enabled=true
-# FIX: 2 second grace period for fast emission (consistent across all processors)
-timeframe.aggregator.grace.seconds=2
+# FIX: 10 second grace period to allow late-arriving data
+timeframe.aggregator.grace.seconds=10
 
 # Family candle output topics
 family.output.topics.1m=family-candle-1m
