--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -325,5 +325,18 @@ logging.level.com.kotsin.consumer.curated=DEBUG
 logging.level.com.kotsin.consumer.score=DEBUG
 logging.level.org.apache.kafka=WARN
 
+# ============================================================================
+# DEEP DEBUG: ENRICHMENT PIPELINE (TRACE level for maximum detail)
+# ============================================================================
+# Set to TRACE for step-by-step debugging, DEBUG for summaries, INFO for key events only
+# Comment out or change to DEBUG/INFO after debugging session
+logging.level.com.kotsin.consumer.enrichment=TRACE
+logging.level.com.kotsin.consumer.enrichment.EnrichedQuantScoreCalculator=TRACE
+logging.level.com.kotsin.consumer.enrichment.analyzer.FamilyContextAnalyzer=TRACE
+logging.level.com.kotsin.consumer.enrichment.tracker.SwingPointTracker=TRACE
+logging.level.com.kotsin.consumer.enrichment.tracker.SessionStructureTracker=TRACE
+logging.level.com.kotsin.consumer.enrichment.detector.EventDetector=TRACE
+logging.level.com.kotsin.consumer.enrichment.signal.SignalGenerator=TRACE
+
 # Pattern with timestamp
 logging.pattern.console=%d{HH:mm:ss.SSS} %-5level [%thread] %logger{36} - %msg%n
