--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -136,20 +136,20 @@ regime.security.ema.fast=8
 regime.security.ema.slow=21
 
 # FMA PROCESSOR (Final Magnitude Assembly)
-# TEMPORARILY DISABLED: Waiting for upstream topics (vtd-output, vcp-combined, etc.)
-fma.enabled=false
+# ENABLED for testing - need to see failure cases
+fma.enabled=true
 fma.cache.ttl.ms=300000
 
 # TRADING SIGNAL PROCESSOR
-# TEMPORARILY DISABLED: Depends on FMA processor output
-signal.enabled=false
+# ENABLED for testing - need to see failure cases
+signal.enabled=true
 signal.cache.ttl.ms=120000
 
 # ============================================================================
 # CURATED SIGNALS (High-Quality Filtered Signals)
 # ============================================================================
-# TEMPORARILY DISABLED: Depends on signal processor output
-curated.enabled=false
+# ENABLED for testing - need to see failure cases
+curated.enabled=true
 
 # F&O API Configuration - DISABLED (using FamilyCandle data instead)
 # The FuturesOptionsService API doesn't exist - we use FamilyCandle data directly
