--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,21 +14,24 @@ spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
 spring.kafka.streams.application-id=${KAFKA_APP_ID:unified-family-processor-v2}
 spring.kafka.streams.client-id=streamingcandle-family
 # FIXED: Use persistent directory instead of /tmp (which OS can clear)
-spring.kafka.streams.state-dir=/var/lib/kafka-streams/${spring.application.name}
+# Updated: 2026-01-16 - REPLAY MODE: Using /tmp for isolated replay state
+spring.kafka.streams.state-dir=/tmp/kafka-streams-replay/${spring.application.name}
 
 # APP-ID PREFIX - Change this to replay data from earliest with new consumer groups
 # Example: "replay-20251229-" creates groups like "replay-20251229-unified-instrument-candle-processor"
-# Updated: 2026-01-04 19:38 - Changed to -v2 to force fresh consumption from earliest
+# Updated: 2026-01-16 - REPLAY MODE for E2E testing
 # This creates NEW consumer groups that will start from the beginning of all topics
-kafka.streams.app-id-prefix=v11-spread-enhanced-20260105-${KAFKA_APP_ID_PREFIX:comprehensive-logging-scriprepo-20260104-v2-}
+kafka.streams.app-id-prefix=replay-e2e-20260116-
 
 # KAFKA CONSUMER GROUP IDS - Change suffix to replay data
 # Add "-v2", "-v3" etc to force new consumer groups and replay from earliest
-# Updated: 2026-01-04 22:59 - Changed to v10 to test 10/10
+# Updated: 2026-01-16 - REPLAY MODE for E2E testing
 # Individual consumer groups
-kafka.consumer.curated-group=curated-consumer-group-v12
-kafka.consumer.mtis-group=mtis-consumer-group-v12
-kafka.consumer.stats-group=stats-consumer-group-v12
+kafka.consumer.curated-group=replay-curated-consumer-20260116
+kafka.consumer.mtis-group=replay-mtis-consumer-20260116
+kafka.consumer.stats-group=replay-stats-consumer-20260116
+kafka.consumer.quant-group=replay-quant-consumer-20260116
+kafka.consumer.fudkii-group=replay-fudkii-consumer-20260116
 
 # Serdes
 spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
@@ -36,8 +39,7 @@ spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.su
 spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer.model,com.kotsin.consumer.domain.model
 
 # FIX: Offset reset - use LATEST for production to avoid replaying old data
-# Use 'earliest' ONLY for testing/replay scenarios (change manually when needed)
-# WARNING: 'earliest' causes delayed signals when processing historical data as if it were live
+# Using 'latest' with fresh consumer groups - backplay module will re-publish data
 spring.kafka.streams.properties.auto.offset.reset=latest
 
 # Processing guarantee
@@ -340,3 +342,17 @@ logging.level.com.kotsin.consumer.enrichment.signal.SignalGenerator=TRACE
 
 # Pattern with timestamp
 logging.pattern.console=%d{HH:mm:ss.SSS} %-5level [%thread] %logger{36} - %msg%n
+
+# ============================================================================
+# PAPER TRADE EXECUTOR (E2E Testing with Backplay)
+# ============================================================================
+# Enabled for replay testing - tracks signals against price data
+paper.trade.executor.enabled=true
+paper.trade.executor.signal.topic=trading-signals-v2
+paper.trade.executor.price.topic=family-candle-1m
+paper.trade.executor.group.id=replay-paper-executor-20260116
+paper.trade.executor.price.group.id=replay-paper-price-20260116
+paper.trade.executor.slippage.bps=5
+paper.trade.executor.max.active.positions=100
+paper.trade.executor.position.timeout.minutes=240
+paper.trade.executor.enable.partial.exits=false
