--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -340,6 +340,16 @@ logging.level.com.kotsin.consumer.enrichment.tracker.SessionStructureTracker=TRA
 logging.level.com.kotsin.consumer.enrichment.detector.EventDetector=TRACE
 logging.level.com.kotsin.consumer.enrichment.signal.SignalGenerator=TRACE
 
+# ============================================================================
+# DEEP DEBUG: TRADING STATE MACHINE & STRATEGIES (DEBUG/TRACE for signal flow)
+# ============================================================================
+# STATE_MGR_DIAG, FUDKII_DIAG, PIVOT_DIAG, PIPELINE_DIAG, ENRICH_DIAG, TECH_DIAG
+logging.level.com.kotsin.consumer.trading=DEBUG
+logging.level.com.kotsin.consumer.trading.state.InstrumentStateManager=DEBUG
+logging.level.com.kotsin.consumer.trading.strategy.FudkiiStrategy=DEBUG
+logging.level.com.kotsin.consumer.trading.strategy.PivotRetestStrategy=DEBUG
+logging.level.com.kotsin.consumer.enrichment.enricher.TechnicalIndicatorEnricher=DEBUG
+
 # Pattern with timestamp
 logging.pattern.console=%d{HH:mm:ss.SSS} %-5level [%thread] %logger{36} - %msg%n
 
